# BTLock_Embed

./: Actor.c  Actor.h  App.c  App.h  BTLock.c  BTLock.h  CMakeLists.txt  OSAL_SimpleBLEPeripheral.c  README.md  command_code.h  simpleBLEPeripheral.c  uid_def.h
